--- a/src/features/nominationForm/components/Survey/Survey.css
+++ b/src/features/nominationForm/components/Survey/Survey.css
@@ -5,16 +5,20 @@
 
 .category {
   color: #76787a;
-  font-size: 1.2rem;
-  font-weight: bold !important;
+  font-size: 1.7rem;
+  font-weight: 300 !important;
+  margin: 30px 0 15px;
 }
 .MuiChip-root {
   background-color: #eeeeee;
 }
 .basic-single {
-  width: 85%;
+  width: 80%;
 }
 .CardTable {
-  margin: 2% 0 !important;
-  width: 85% !important;
+  margin: 2% 0;
+  width: 90%;
+}
+.table {
+  margin-bottom: 0;
 }
