--- a/src/features/nominationForm/components/self-survey/self-survey.css
+++ b/src/features/nominationForm/components/self-survey/self-survey.css
@@ -2,11 +2,12 @@
     width: 60% !important;
     margin: 2% auto;
 } */
-
+/* 
 .category {
   color: #76787a;
-  font-size: 1.2rem;
-  font-weight: bold !important;
+  font-size: 1.7rem;
+  font-weight: 300 !important;
+  margin: 30px 0 15px;
 }
 .MuiChip-root {
   background-color: #eeeeee;
@@ -17,4 +18,4 @@
 .CardTable {
   margin: 2% 0 !important;
   width: 52% !important;
-}
+} */
