--- a/src/features/survey-form/components/main-form/survey-form.css
+++ b/src/features/survey-form/components/main-form/survey-form.css
@@ -22,7 +22,7 @@
 }
 .row {
   text-align: right;
-  display: inline-block !important;
+  display: flex !important;
 }
 .slider {
   width: 85% !important;
