--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 body {
   margin: 0;
-  font-family: "IranSans" !important;
+  font-family: IRANYekan, tahoma;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
