--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ body {
 }
 .card {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
+  border-radius: 2px;
 }
