--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "./assets/css/style.bundle.css";
+@import "./assets/css/style.bundle.rtl.min.css";
 
 body {
   margin: 0;
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 h1,
 h2,
 h3,
@@ -13,6 +14,9 @@ h4,
 h5,
 h6 {
   font-family: IRANYekan !important;
+}
+.rtl {
+  direction: rtl;
 }
 .card {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
