--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@ h5,
 h6 {
   font-family: IRANYekan !important;
 }
-.rtl {
-  direction: rtl;
+.ltr {
+  direction: ltr;
 }
 .card {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
