--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -1,8 +1,10 @@
+@dk-red: 10px;
+
 .show > .btn-hover-brand,
 .btn-hover-brand.active,
 .btn-hover-brand:active,
 .btn-hover-brand:hover {
   color: #ffffff;
-  background-color: #591df1;
-  border-color: #591df1;
+  background-color: @dk-red;
+  border-color: @dk-red;
 }
