--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,5 @@
+@dk-font: IRANYekan, tahoma;
+
 .App {
   /* text-align: center; */
 }
@@ -47,15 +49,7 @@ a:visited {
   color: #388e3c !important;
 }
 
-.MuiTableCell-root {
-  font-family: IranSans, tahoma;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MuiTableCell-root,
+.MuiTypography-body2 {
+  font-family: @dk-font !important;
 }
