--- a/src/App.less
+++ b/src/App.less
@@ -1,8 +1,21 @@
 @dk-font: IRANYekan, tahoma;
 
-.App {
-  /* text-align: center; */
+body {
+  margin: 0;
+  font-family: IRANYekan, tahoma;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: IRANYekan !important;
+}
+
 a:visited {
   color: inherit !important;
 }
