--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,11 @@
 @import "./assets/css/style.bundle.rtl.min.css";
 @import "./assets/css/dk-brand.less";
 
-body {
-  margin: 0;
-  font-family: IRANYekan, tahoma;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: IRANYekan !important;
-}
 .ltr {
   direction: ltr;
+}
+.rtl {
+  direction: rtl;
 }
 .card {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
