--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -1,11 +1,19 @@
 @dk-red: #ef5661;
+@dk-red-alpha: #ef56611a;
 
-.btn-primary,
-.btn-hover-brand,
-.btn-hover-brand.active,
-.btn-hover-brand:active,
-.btn-hover-brand:hover {
-  color: #ffffff;
-  background-color: @dk-red;
-  border-color: @dk-red;
+.btn-brand {
+  color: #fff !important;
+  background-color: @dk-red!important;
+}
+
+.btn-brand-hover {
+  color: @dk-red!important;
+  background-color: @dk-red-alpha!important;
+}
+.btn-brand-hover.active,
+.btn-brand-hover:active,
+.btn-brand-hover:hover {
+  color: #ffffff !important;
+  background-color: @dk-red!important;
+  border-color: @dk-red!important;
 }
