--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -4,12 +4,15 @@
 .btn-brand {
   color: #fff !important;
   background-color: @dk-red!important;
+  border-color: @dk-red!important;
 }
 
 .btn-brand-hover {
   color: @dk-red!important;
   background-color: @dk-red-alpha!important;
+  border-color: @dk-red-alpha!important;
 }
+
 .btn-brand-hover.active,
 .btn-brand-hover:active,
 .btn-brand-hover:hover {
