--- a/src/App.less
+++ b/src/App.less
@@ -66,3 +66,8 @@ a:visited {
 .MuiTypography-body2 {
   font-family: @dk-font !important;
 }
+
+.MuiStepConnector-alternativeLabel {
+  left: calc(50% + 20px) !important;
+  right: calc(-50% + 20px) !important;
+}
