--- a/src/App.less
+++ b/src/App.less
@@ -20,6 +20,10 @@ a:visited {
   color: inherit !important;
 }
 
+.brand-font {
+  font-family: @dk-font!important;
+}
+
 .card-header {
   position: relative;
   word-break: break-word;
@@ -65,9 +69,4 @@ a:visited {
 .MuiTableCell-root,
 .MuiTypography-body2 {
   font-family: @dk-font !important;
-}
-
-.MuiStepConnector-alternativeLabel {
-  left: calc(50% + 20px) !important;
-  right: calc(-50% + 20px) !important;
 }
