--- a/src/App.less
+++ b/src/App.less
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: IRANYekan, tahoma;
+  font-family: @dk-font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,7 +13,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: IRANYekan !important;
+  font-family: @dk-font !important;
 }
 
 a:visited {
