--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -20,3 +20,11 @@
   background-color: @dk-red!important;
   border-color: @dk-red!important;
 }
+
+.dk-username {
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: #595d6e;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
