--- a/src/features/survey-form/components/survey-intro/survey-intro.css
+++ b/src/features/survey-form/components/survey-intro/survey-intro.css
@@ -94,3 +94,30 @@ img.kt-svg-icon {
   width: 85%;
   height: auto;
 }
+
+.progress-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 0.7rem;
+}
+
+.progress-details .progress-number {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #595d6e;
+  line-height: 1.1;
+}
+
+.progress-details .progress-status {
+  font-size: 1rem;
+  color: #74788d;
+  font-weight: 40;
+  line-height: 1.1;
+}
