--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,6 @@
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12) !important;
   border-radius: 2px;
 }
+.closeSnackbar {
+  margin-right: 100% !important;
+}
