--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -1,6 +1,7 @@
 @dk-red: #ef5661;
 @dk-red-alpha: #ef56611a;
-
+@dk-blue: #19bfd3;
+@dk-grey: #636466;
 .btn-brand {
   color: #fff !important;
   background-color: @dk-red!important;
@@ -27,4 +28,16 @@
   color: #595d6e;
   -webkit-transition: color 0.3s ease;
   transition: color 0.3s ease;
+}
+.dk-brand-blue {
+  color: #ffffff !important;
+  background-color: @dk-blue!important;
+}
+.dk-brand-grey {
+  color: #ffffff !important;
+  background-color: @dk-grey!important;
+}
+.dk-brand-red {
+  color: #ffffff !important;
+  background-color: @dk-red!important;
 }
