--- a/src/features/survey-form/components/survey-intro/survey-intro.css
+++ b/src/features/survey-form/components/survey-intro/survey-intro.css
@@ -121,3 +121,14 @@ img.kt-svg-icon {
   font-weight: 40;
   line-height: 1.1;
 }
+.NoAvatar {
+  background: linear-gradient(135deg, #acb6e5, #86fde8);
+  color: aliceblue;
+  border-radius: 50%;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 10px;
+}
+.MuiSlider-markLabel {
+  font-weight: 600;
+}
