--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -2,6 +2,7 @@
 @dk-red-alpha: #ef56611a;
 @dk-blue: #19bfd3;
 @dk-grey: #636466;
+@dk-green: #12b259;
 .btn-brand {
   color: #fff !important;
   background-color: @dk-red!important;
@@ -40,4 +41,16 @@
 .dk-brand-red {
   color: #ffffff !important;
   background-color: @dk-red!important;
+}
+.dk-brand-green {
+  color: #ffffff !important;
+  background-color: @dk-green!important;
+}
+.dk-brand-green-font {
+  color: #ffffff !important;
+  color: @dk-green!important;
+}
+.dk-brand-red-font {
+  color: #ffffff !important;
+  color: @dk-red!important;
 }
