--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -54,3 +54,8 @@
   color: #ffffff !important;
   color: @dk-red!important;
 }
+
+.dk-primary {
+  background-image: radial-gradient(circle farthest-corner at 10.6% 22.1%, #f27581 0%, #ed145a 100.7%);
+  color: rgb(255, 255, 255) !important;
+}
