--- a/src/App.less
+++ b/src/App.less
@@ -31,7 +31,7 @@ a:visited {
   border-top-right-radius: 8px;
   padding: 3rem 4rem;
   // background: linear-gradient(135deg, rgb(253, 121, 116), rgb(252, 57, 51));
-  background-image: radial-gradient(circle farthest-corner at 10.6% 22.1%, rgb(252, 57, 51) 0%, #c92d28 100.7%);
+  background-image: radial-gradient(circle farthest-corner at 10.6% 22.1%, #f27581 0%, #ed145a 100.7%);
   color: rgb(255, 255, 255);
 }
 
