--- a/src/App.less
+++ b/src/App.less
@@ -41,7 +41,12 @@ a:visited {
 }
 
 .page-header {
-  font-size: 21px;
+  font-size: 14px;
+  font-weight: 100;
+}
+.user-name {
+  font-size: 25px;
+  font-weight: 900;
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
