change snack bar errors,fix submit spinner problem

--- a/src/App.less
+++ b/src/App.less
@@ -76,3 +76,7 @@ a:visited {
 .MuiTypography-body2 {
   font-family: @dk-font !important;
 }
+.error {
+  background: #f37a8a85 !important;
+  padding: 2% !important;
+}
