--- a/src/features/nominationForm/components/snakbar-message/snackbar-message.css
+++ b/src/features/nominationForm/components/snakbar-message/snackbar-message.css
@@ -14,7 +14,7 @@
   z-index: 1400;
   position: relative;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-flow: row-reverse;
   margin-bottom: 10px;
 }
@@ -25,4 +25,8 @@
   margin-right: auto;
   margin-left: -8px;
   padding-right: 16px;
+  padding-left: 0;
+}
+.MuiIconButton-root {
+  font-size: 1rem;
 }
