--- a/src/features/nominationForm/components/self-nomination/self-enomination-form.css
+++ b/src/features/nominationForm/components/self-nomination/self-enomination-form.css
@@ -26,3 +26,11 @@
   display: flex !important;
   margin-bottom: 2%;
 }
+.NoAvatar {
+  background: linear-gradient(135deg, #acb6e5, #86fde8);
+  color: aliceblue;
+  border-radius: 50%;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 10px;
+}
