add border grey brand

--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -3,6 +3,7 @@
 @dk-blue: #19bfd3;
 @dk-grey: #636466;
 @dk-green: #12b259;
+
 .btn-brand {
   color: #fff !important;
   background-color: @dk-red!important;
@@ -58,4 +59,8 @@
 .dk-primary {
   background-image: radial-gradient(circle farthest-corner at 10.6% 22.1%, #f27581 0%, #ed145a 100.7%);
   color: rgb(255, 255, 255) !important;
+}
+
+.border-brand-grey {
+  border-color: @dk-grey;
 }
