add toast notificatins

--- a/src/App.less
+++ b/src/App.less
@@ -80,3 +80,20 @@ a:visited {
   background: #f37a8a85 !important;
   padding: 2% !important;
 }
+
+// Toastify
+
+.Toastify__toast {
+  border-radius: 3px 3px 3px 3px !important;
+  font-family: @dk-font!important;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR…ftP4P7SP4N3CJZdvzoNyGq2c/HWOXJGsvVg+RA/k2MC/wN6I2YA2Pt8GkAAAAASUVORK5CYII=) !important;
+}
+.Toastify__close-button {
+  align-self: auto !important;
+  text-align: end;
+  padding-left: 10px;
+}
+.Toastify__close-button:active,
+.Toastify__close-button:hover {
+  background-color: transparent !important;
+}
