add warning to survey form

--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -3,7 +3,8 @@
 @dk-blue: #19bfd3;
 @dk-grey: #636466;
 @dk-green: #12b259;
-
+@dk-yellow :#FDB740;
+@dk-darkBlue: #3d5ba9;
 .btn-brand {
   color: #fff !important;
   background-color: @dk-red!important;
@@ -47,6 +48,10 @@
   color: #ffffff !important;
   background-color: @dk-green!important;
 }
+.dk-brand-yellow {
+  color: #ffffff !important;
+  background-color: @dk-yellow!important;
+}
 .dk-brand-green-font {
   color: #ffffff !important;
   color: @dk-green!important;
@@ -54,6 +59,10 @@
 .dk-brand-red-font {
   color: #ffffff !important;
   color: @dk-red!important;
+}
+.dk-brand-bllue-font {
+  color: #ffffff !important;
+  color: @dk-darkBlue!important;
 }
 
 .dk-primary {
