--- a/src/features/survey-form/components/main-form/survey-form.css
+++ b/src/features/survey-form/components/main-form/survey-form.css
@@ -55,7 +55,7 @@
 }
 .badge {
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 200;
   width: 363px;
   height: 36px;
   margin-top: -6%;
@@ -69,4 +69,18 @@
 }
 .bold-text {
   font-weight: 800 !important;
+}
+
+.bottom-stick {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 1;
+  padding: 15px 5% 15px 5% !important;
+}
+.MuiSvgIcon-root {
+  margin-right: 5px !important;
+  margin-bottom: 5px;
 }
