add survey intro textings

--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -52,17 +52,14 @@
   color: #ffffff !important;
   background-color: @dk-yellow!important;
 }
-.dk-brand-green-font {
-  color: #ffffff !important;
+.dk-brand-text-green {
   color: @dk-green!important;
 }
-.dk-brand-red-font {
-  color: #ffffff !important;
+.dk-brand-text-red {
   color: @dk-red!important;
 }
-.dk-brand-bllue-font {
-  color: #ffffff !important;
-  color: @dk-darkBlue!important;
+.dk-brand-text-blue {
+  color: @dk-blue!important;
 }
 
 .dk-primary {
