--- a/src/features/survey-form/components/survey-intro/survey-intro.css
+++ b/src/features/survey-form/components/survey-intro/survey-intro.css
@@ -1,16 +1,14 @@
-.intro {
-  white-space: pre-line !important;
+.intro p {
   text-align: right;
-  width: 95%;
-  margin: 1% 1%;
   direction: rtl;
+  line-height: 30px;
+  text-align: justify;
 }
-.intro-en {
-  white-space: pre-line !important;
+.intro-en p {
   text-align: left;
-  width: 95%;
-  margin: 1% 1%;
   direction: ltr;
+  line-height: 30px;
+  text-align: justify;
 }
 .intro-card {
   margin: 2% auto;
