bulletted survey text

--- a/src/features/survey-form/components/survey-intro/survey-intro.less
+++ b/src/features/survey-form/components/survey-intro/survey-intro.less
@@ -1,9 +1,11 @@
+@import "../../../../assets/css/dk-brand.less";
+
 .survey-intro .intro p {
   text-align: right;
   direction: rtl;
   line-height: 30px;
   text-align: justify;
-  padding-left: 20px;
+  padding-left: 17px;
 }
 .survey-intro .intro-en p {
   text-align: left;
@@ -138,4 +140,10 @@ img.kt-svg-icon {
 }
 .MuiSlider-markLabel {
   font-weight: 600;
+}
+
+.la.bullet:before {
+  content: "\f17c";
+  color: @dk-blue;
+  font-size: 1.4rem;
 }
