add read more button

--- a/src/App.less
+++ b/src/App.less
@@ -97,3 +97,12 @@ a:visited {
 .Toastify__close-button:hover {
   background-color: transparent !important;
 }
+.collapse-show {
+  display: block;
+
+  transition: all 0.3s ease-in-out;
+}
+.collapse {
+  display: none;
+  transition: all 0.3s ease-in-out;
+}
