Add DKSpinner Component

--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -3,7 +3,7 @@
 @dk-blue: #19bfd3;
 @dk-grey: #636466;
 @dk-green: #12b259;
-@dk-yellow :#FDB740;
+@dk-yellow: #fdb740;
 @dk-darkBlue: #3d5ba9;
 .btn-brand {
   color: #fff !important;
@@ -73,4 +73,9 @@
 
 .Toastify__toast--error {
   background: @dk-red!important;
+}
+
+.kt-spinner.kt-spinner--brand:before {
+  border: 2px solid @dk-red;
+  border-right: 2px solid transparent;
 }
