add some features

--- a/src/features/survey-form/components/survey-intro/survey-intro.less
+++ b/src/features/survey-form/components/survey-intro/survey-intro.less
@@ -12,7 +12,7 @@
   direction: ltr;
   line-height: 30px;
   text-align: justify;
-  font-size: 0.95rem;
+  font-size: 1rem;
 }
 .intro-card {
   margin: 2% auto;
@@ -132,18 +132,24 @@ img.kt-svg-icon {
 }
 .NoAvatar {
   background: linear-gradient(135deg, #acb6e5, #86fde8);
-  color: aliceblue;
+  color: #f0f8ff;
   border-radius: 50%;
-  font-size: 1.3rem;
-  font-weight: 600;
-  padding: 10px;
+  font-size: 0.9rem;
+  width: 40px;
+  height: 40px;
+  // font-weight: 800;
+  text-align: center;
+  padding-top: 10px;
+  margin: 0 !important;
 }
 .MuiSlider-markLabel {
   font-weight: 600;
 }
 
 .la.bullet:before {
-  content: "\f17c";
+  // content: "\f17c";
+  content: "•";
+
   color: @dk-blue;
   font-size: 1.4rem;
 }
