--- a/src/features/dashboard/dashboard-header/dashboard-header.css
+++ b/src/features/dashboard/dashboard-header/dashboard-header.css
@@ -1,3 +1,15 @@
 .avatar-size {
   width: 50px;
 }
+.NoAvatar {
+  background: linear-gradient(135deg, #acb6e5, #86fde8);
+  color: #f0f8ff;
+  border-radius: 50%;
+  font-size: 0.9rem;
+  width: 40px;
+  height: 40px;
+  font-weight: 800;
+  text-align: center;
+  padding-top: 10px;
+  margin: 0 !important;
+}
