--- a/src/features/survey-form/components/survey-intro/survey-intro.less
+++ b/src/features/survey-form/components/survey-intro/survey-intro.less
@@ -137,7 +137,7 @@ img.kt-svg-icon {
   font-size: 0.9rem;
   width: 40px;
   height: 40px;
-  // font-weight: 800;
+  font-weight: 400;
   text-align: center;
   padding-top: 10px;
   margin: 0 !important;
