--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -79,3 +79,9 @@
   border: 2px solid @dk-red;
   border-right: 2px solid transparent;
 }
+.text-align-right {
+  text-align: right !important;
+}
+.text-align-left {
+  text-align: left !important;
+}
