--- a/src/features/dashboard/dashboard-header/dashboard-header.css
+++ b/src/features/dashboard/dashboard-header/dashboard-header.css
@@ -11,3 +11,11 @@
   background: linear-gradient(135deg, #acb6e5, #86fde8);
   color: #fff !important;
 }
+.kt-widget.kt-widget--user-profile-3 .kt-widget__top .kt-widget__content .kt-widget__head .kt-widget__username {
+  font-size: 2.2rem;
+  color: #ffffff;
+  font-weight: 700;
+}
+.kt-widget.kt-widget--user-profile-3 .kt-widget__top .kt-widget__content {
+  color: #fff;
+}
