--- a/src/features/dashboard/index/index.css
+++ b/src/features/dashboard/index/index.css
@@ -23,9 +23,10 @@
   text-align: center;
 }
 .desc-questions {
-  color: #77787b;
-  font-weight: 500;
-  font-size: 1.1rem;
+  color: #000000;
+  font-weight: 700;
+  font-size: 1rem;
+  margin-bottom: 8px;
 }
 
 .question {
