--- a/src/core/components/svg-icon/svg-icon.less
+++ b/src/core/components/svg-icon/svg-icon.less
@@ -1,5 +1,5 @@
 @import "../../../assets/css/dk-brand.less";
 
-svg.kt-svg-icon g [fill] {
-  fill: @dk-blue;
-}
+// svg.kt-svg-icon g [fill] {
+//   fill: @dk-blue;
+// }
