--- a/src/features/aggregate-dashboard/heatmap/heatmap-ruler.css
+++ b/src/features/aggregate-dashboard/heatmap/heatmap-ruler.css
@@ -8,12 +8,14 @@
   position: absolute;
   border-left: 1px solid #555;
   height: 14px;
-  width: 10%;
+  width: 12.5%;
 }
 .ruler .cm:after {
   position: absolute;
-  bottom: -15px;
-  font: 11px/1 sans-serif;
+  bottom: -25px;
+  left: -3px;
+  text-align: center;
+  font-weight: 400;
 }
 .ruler .mm {
   height: 5px;
@@ -28,65 +30,54 @@
   content: "1";
 }
 .ruler .cm:nth-of-type(2) {
-  left: 10%;
+  left: 12.5%;
 }
 .ruler .cm:nth-of-type(2):after {
-  content: "2";
+  content: "1.5";
 }
 .ruler .cm:nth-of-type(3) {
-  left: 20%;
+  left: 25%;
 }
 .ruler .cm:nth-of-type(3):after {
-  content: "3";
+  content: "2";
 }
 .ruler .cm:nth-of-type(4) {
-  left: 30%;
+  left: 37.5%;
 }
 .ruler .cm:nth-of-type(4):after {
-  content: "4";
+  content: "2.5";
 }
 .ruler .cm:nth-of-type(5) {
-  left: 40%;
-}
-.ruler .cm:nth-of-type(5):after {
-  content: "5";
-}
-.ruler .cm:nth-of-type(6) {
   left: 50%;
 }
+.ruler .cm:nth-of-type(5):after {
+  content: "3";
+}
+.ruler .cm:nth-of-type(6) {
+  left: 62.5%;
+}
 .ruler .cm:nth-of-type(6):after {
-  content: "6";
+  content: "3.5";
 }
 .ruler .cm:nth-of-type(7) {
-  left: 60%;
+  left: 75%;
 }
 .ruler .cm:nth-of-type(7):after {
-  content: "7";
+  content: "4";
 }
 .ruler .cm:nth-of-type(8) {
-  left: 70%;
+  left: 87.5%;
 }
 .ruler .cm:nth-of-type(8):after {
-  content: "8";
+  content: "4.5";
 }
 .ruler .cm:nth-of-type(9) {
-  left: 80%;
-}
-.ruler .cm:nth-of-type(9):after {
-  content: "9";
-}
-.ruler .cm:nth-of-type(10) {
-  left: 90%;
-}
-.ruler .cm:nth-of-type(10):after {
-  content: "10";
-}
-.ruler .cm:nth-of-type(11) {
   left: 100%;
 }
-.ruler .cm:nth-of-type(11):after {
-  content: "10";
+.ruler .cm:nth-of-type(9):after {
+  content: "5";
 }
+
 .ruler .mm:nth-of-type(1) {
   left: 10%;
 }
