--- a/src/features/aggregate-dashboard/heatmap/heatmap.css
+++ b/src/features/aggregate-dashboard/heatmap/heatmap.css
@@ -50,3 +50,9 @@
   font-weight: 500;
   line-height: 3rem;
 }
+.grow {
+  transition: all 0.3s ease-in-out;
+}
+.grow:hover {
+  transform: scaleY(1.05);
+}
