add expand button

--- a/src/features/aggregate-dashboard/heatmap/heatmap.css
+++ b/src/features/aggregate-dashboard/heatmap/heatmap.css
@@ -50,3 +50,16 @@
   font-weight: 500;
   line-height: 3rem;
 }
+.hidden-row {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+}
+
+.show-row {
+  display: table-row;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 300ms;
+}
