--- a/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
+++ b/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
@@ -6,3 +6,9 @@
     -1px 1px 0 #fff;
   font-size: 1rem;
 }
+.header {
+  color: #fff;
+  font-weight: 500;
+  margin-top: 3%;
+  font-size: 1.2rem;
+}
