fix some styles

--- a/src/assets/css/dk-brand.less
+++ b/src/assets/css/dk-brand.less
@@ -38,7 +38,7 @@
 }
 .dk-brand-grey {
   color: #ffffff !important;
-  background-color: @dk-grey!important;
+  background-color: @dk-grey;
 }
 .dk-brand-red {
   color: #ffffff !important;
