--- a/src/features/aggregate-dashboard/heatmap/heatmap.css
+++ b/src/features/aggregate-dashboard/heatmap/heatmap.css
@@ -39,8 +39,8 @@
 }
 
 .none-thead {
-  background: transparent !important;
-  border-color: transparent transparent #ebedf2 transparent !important;
+  background: #fff !important;
+  border-color: #fff !important;
 }
 .legend {
   color: #fff;
@@ -68,4 +68,11 @@
 }
 .grow:hover {
   transform: scaleY(1.05);
+}
+
+.title-link {
+  font-weight: 500 !important;
+  color: #0e435d !important;
+  line-height: 24px;
+  cursor: pointer;
 }
