--- a/src/features/aggregate-dashboard/heatmap/heatmap.css
+++ b/src/features/aggregate-dashboard/heatmap/heatmap.css
@@ -84,3 +84,30 @@
   line-height: 24px;
   cursor: pointer;
 }
+
+.showmore {
+  padding: 40px 0;
+  line-height: 40px;
+  margin-top: -10px;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff), color-stop(1, #fff));
+}
+.seeMore {
+  padding: 0;
+  height: 41px;
+  color: gray;
+  text-align: center;
+  background: repeating-linear-gradient(white, #ecefef 5px, #ecefef 5px, #ecefef 6px);
+  border-bottom: none;
+  box-shadow: 0 -1px rgba(0, 0, 0, 0.16) inset;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 500ms;
+}
+.seeMore > span {
+  font-size: 11px;
+  line-height: 29px;
+  padding: 5px 8px;
+  background: white;
+  border-radius: 2px 2px 0 0;
+  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75), 0 1px white; */
+}
