--- a/src/core/components/portlet/summary-portlet.css
+++ b/src/core/components/portlet/summary-portlet.css
@@ -18,3 +18,6 @@
 .kt-iconbox--brand.kt-iconbox--animate-slower {
   background-color: rgba(158, 160, 161, 0.07) !important;
 }
+.kt-portlet__head {
+  z-index: 2 !important;
+}
