add datalabel plugin

--- a/src/core/components/svg-icon/svg-icon.less
+++ b/src/core/components/svg-icon/svg-icon.less
@@ -3,3 +3,14 @@
 // svg.kt-svg-icon g [fill] {
 //   fill: @dk-blue;
 // }
+.icon-red g [fill] {
+  fill: @dk-red;
+}
+
+.icon-yellow g [fill] {
+  fill: @dk-yellow;
+}
+
+.icon-blue g [fill] {
+  fill: @dk-blue;
+}
