--- a/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
+++ b/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
@@ -1,14 +1,9 @@
-.total {
-  background-image: radial-gradient(circle farthest-corner at 10.6% 22.1%, #77787b 0%, #dedfe0 100.7%);
-  color: #000;
-  font-weight: 700;
-  text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff,
-    -1px 1px 0 #fff;
-  font-size: 1rem;
-}
 .header {
   color: #fff;
   font-weight: 500;
   margin-top: 3%;
   font-size: 1.2rem;
+}
+.kt-widget17 .kt-widget17__stats .kt-widget17__items .kt-widget17__item {
+  padding: 1.2rem;
 }
