change dropdowns value to dep & supdep & level

--- a/src/core/components/svg-icon/svg-icon.less
+++ b/src/core/components/svg-icon/svg-icon.less
@@ -14,3 +14,8 @@
 .icon-blue g [fill] {
   fill: @dk-blue;
 }
+
+.kt-widget17 .kt-widget17__stats .kt-widget17__items .kt-widget17__item .kt-widget17__icon svg {
+  width: inherit;
+  height: inherit;
+}
