fix nullish data

--- a/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
+++ b/src/features/aggregate-dashboard/participant-comparison/participant-comparison.css
@@ -1,7 +1,7 @@
 .header {
   color: #fff;
   font-weight: 500;
-  margin-top: 3%;
+  margin-top: 15px;
   font-size: 1.2rem;
 }
 .kt-widget17 .kt-widget17__stats .kt-widget17__items .kt-widget17__item {
